tex fix to help push error

--- a/lectures/week3_ss_science_and_measure.Rmd
+++ b/lectures/week3_ss_science_and_measure.Rmd
@@ -373,7 +373,7 @@ Do you have to take this class?
 
 ## Mean
 
-$${\displaystyle {\bar {x}}={\frac {1}{n}}\left(\sum _{i=1}^{n}{x_{i}}\right)={\frac {x_{1}+x_{2}+\cdots +x_{n}}{n}}}$$
+$${\bar {x}}={\frac {1}{n}}\left(\sum _{i=1}^{n}{x_{i}}\right)={\frac {x_{1}+x_{2}+\cdots +x_{n}}{n}}$$
 
 ## Standard Deviation
 
